--- a/package.json
+++ b/package.json
@@ -1,91 +1,25 @@
-user  nginx;
-worker_processes  2;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
-
-events
 {
-worker_connections  1024;
-}
-http{
-include       /etc/nginx/mime.types;
-default_type  application/octet-stream;
-
-log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-'$status $body_bytes_sent "$http_referer" '
-'"$http_user_agent" "$http_x_forwarded_for"';
-
-access_log  /var/log/nginx/access.log  main;
-
-sendfile        on;
-#tcp_nopush     on;
-
-keepalive_timeout  65;
-
-gzip on;
-gzip_min_length  1k;
-gzip_buffers     4 16k;
-gzip_http_version 1.1;
-gzip_comp_level 2;
-gzip_types       text/plain application/x-javascript text/css application/xml application/json;
-gzip_vary on;
-
-include /etc/nginx/conf.d/*.conf;
-    upstream apiServer {
-        server 10.161.165.33:3001 weight=1;
-    }
-    server{
-
-        listen       80;
-       
-        server_name  api.hisforce.cn;
-    location / {
-               proxy_pass http://apiServer;
-                proxy_redirect off;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-               client_max_body_size 10m;
-                client_body_buffer_size 128k;
-               proxy_connect_timeout 90;
-               proxy_send_timeout 90;
-                proxy_read_timeout 90;
-                proxy_buffer_size 4k;
-                proxy_buffers 4 32k;
-              proxy_busy_buffers_size 64k;
-               proxy_temp_file_write_size 64k;
-          }
-
-
-    }
-    server {
-                listen       80;
-                server_name  *.hisforce.cn;
-
-                location / {
-                    root   /opt/hisforce;
-                    index  index.html index.htm;
-                }
-
-location /conversation-new {
-root /opt;
-
-}
-
-
-
-
-            }
-
-            server {
-
-              listen   80;
-              server_name admin.hisforce.cn;
-              location / {
-    	     root  /opt/hisforce_platform;
-
-              }}
-
+  "name": "angelGuider",
+  "version": "0.0.1",
+  "main": "server.js",
+  "description": "angel guider service",
+  "author": "Johnson he",
+  "dependencies": {
+    "bluebird": "^2.10.2",
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "i18n": "^0.5.0",
+    "jpush-sdk": "^3.2.1",
+    "jsonwebtoken": "^5.4.0",
+    "kue": "^0.10.5",
+    "lodash": "^3.10.1",
+    "md5": "^2.0.0",
+    "mime": "^1.3.4",
+    "moment": "^2.10.6",
+    "mysql": "^2.9.0",
+    "redis": "^2.1.0",
+    "request": "^2.65.0",
+    "restify": "^4.0.3",
+    "shortid": "^2.2.6"
+  }
 }
