--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redis": "^2.1.0",
     "request": "^2.65.0",
     "restify": "^4.0.3",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "xml2js": "^0.4.17"
   }
 }
